@@ -22,6 +22,7 @@ DEMOS = \
 	fibre.c \
 	helloworld.c \
 	perf.c \
+	pi.c \
 	roman.c \
 	sep.c
 
@@ -30,7 +31,7 @@ TESTS = $(DEMOS)
 include $(top_srcdir)/build-aux/slctests.mk
 
 EXTRA_DIST = $(DEMOS)
-EXTRA_DIST += fibre.c.d1 fibre.c.d2 fibre.c.d3 bitblt.c.d keyblit.c.d
+EXTRA_DIST += fibre.c.d1 fibre.c.d2 fibre.c.d3 fibre.c.d4 bitblt.c.d keyblit.c.d
 
 if ENABLE_DEMOS
 noinst_DATA = $(DEMOS:.c=.x)
